--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 name: P E K K O S
 exclude: ["patterns", "gruntfile.js", "package.json", "node_modules"]
 permalink: none
+gems:
+  - jekyll-redirect-from
