--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ exclude: ["patterns", "gruntfile.js", "package.json", "node_modules"]
 permalink: /:categories/:title/
 gems:
   - jekyll-redirect-from
+  - jekyll-sitemap
 highlighter: rouge
 markdown: kramdown
 kramdown:
