--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ permalink: /:categories/:title/
 gems:
   - jekyll-redirect-from
   - jekyll-sitemap
+  - jekyll-feed
 highlighter: rouge
 markdown: kramdown
 kramdown:
