--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
   "repository": "https://github.com/pekkos/pekkos.github.io.git",
   "license": "UNLICENSED",
   "devDependencies": {
+    "autoprefixer": "^6.6.1",
     "grunt": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^1.0.2",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-dev-update": "^2.0.0",
+    "grunt-gzip": "^0.1.0",
+    "grunt-newer": "^1.2.0",
     "grunt-notify": "^0.4.5",
+    "grunt-postcss": "^0.8.0",
     "grunt-sass": "^2.0.0",
     "grunt-shell": "^2.1.0",
+    "pixrem": "^3.0.2",
+    "postcss-merge-rules": "^2.1.1",
     "time-grunt": "^1.3.0"
   }
 }
