--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "autoprefixer": "^6.6.1",
+    "fs-extra": "^2.1.2",
     "grunt": "^1.0.1",
+    "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^1.0.2",
+    "grunt-contrib-cssmin": "^2.1.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-css-mqpacker": "^3.0.1",
     "grunt-dev-update": "^2.0.0",
     "grunt-gzip": "^0.1.0",
     "grunt-newer": "^1.2.0",
@@ -17,7 +20,9 @@
     "grunt-postcss": "^0.8.0",
     "grunt-sass": "^2.0.0",
     "grunt-shell": "^2.1.0",
+    "grunt-svgstore": "^1.0.0",
     "pixrem": "^3.0.2",
+    "postcss-discard-duplicates": "^2.0.1",
     "postcss-merge-rules": "^2.1.1",
     "time-grunt": "^1.3.0"
   }
