--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "repository": "https://github.com/pekkos/pekkos.github.io.git",
   "license": "UNLICENSED",
   "devDependencies": {
-    "autoprefixer": "^6.6.1",
-    "fs-extra": "^2.1.2",
+    "autoprefixer": "^8.2.0",
+    "fs-extra": "^5.0.0",
     "grunt": "^1.0.1",
     "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
@@ -17,11 +17,12 @@
     "grunt-gzip": "^0.1.0",
     "grunt-newer": "^1.2.0",
     "grunt-notify": "^0.4.5",
-    "grunt-postcss": "^0.8.0",
+    "grunt-postcss": "^0.9.0",
     "grunt-sass": "^2.0.0",
     "grunt-shell": "^2.1.0",
     "grunt-svgstore": "^1.0.0",
-    "pixrem": "^3.0.2",
+    "load-grunt-config": "^0.19.2",
+    "pixrem": "^4.0.1",
     "postcss-discard-duplicates": "^2.0.1",
     "postcss-merge-rules": "^2.1.1",
     "time-grunt": "^1.3.0"
