--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "autoprefixer": "^8.2.0",
     "fs-extra": "^5.0.0",
     "grunt": "^1.0.1",
+    "grunt-cloudinary": "^0.3.2",
     "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^2.1.0",
@@ -26,5 +27,8 @@
     "postcss-discard-duplicates": "^2.0.1",
     "postcss-merge-rules": "^2.1.1",
     "time-grunt": "^1.3.0"
+  },
+  "dependencies": {
+    "chalk": "^2.4.1"
   }
 }
