--- a/package.json
+++ b/package.json
@@ -5,23 +5,27 @@
   "repository": "https://github.com/pekkos/pekkos.github.io.git",
   "license": "UNLICENSED",
   "devDependencies": {
-    "autoprefixer": "^8.2.0",
+    "autoprefixer": "^8.6.5",
     "fs-extra": "^5.0.0",
-    "grunt": "^1.0.1",
+    "grunt": "^1.0.3",
     "grunt-cloudinary": "^0.3.2",
     "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^2.1.0",
-    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-css-mqpacker": "^3.0.1",
     "grunt-dev-update": "^2.0.0",
     "grunt-gzip": "^0.1.0",
     "grunt-newer": "^1.2.0",
     "grunt-notify": "^0.4.5",
     "grunt-postcss": "^0.9.0",
-    "grunt-sass": "^2.0.0",
+    "grunt-sass": "^2.1.0",
     "grunt-shell": "^2.1.0",
     "grunt-svgstore": "^1.0.0",
+    "gulp": "^3.9.1",
+    "gulp-scp2": "^0.2.0",
+    "gulp-sftp": "^0.1.5",
+    "gulp-ssh-deploy": "0.0.3",
     "load-grunt-config": "^0.19.2",
     "pixrem": "^4.0.1",
     "postcss-discard-duplicates": "^2.0.1",
