--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "repository": "https://github.com/pekkos/pekkos.github.io.git",
   "license": "UNLICENSED",
   "devDependencies": {
-    "autoprefixer": "^8.6.5",
+    "autoprefixer": "^9.3.1",
+    "css-declaration-sorter": "^4.0.1",
+    "css-mqpacker": "^7.0.0",
+    "foundation-sites": "^6.5.0",
     "fs-extra": "^5.0.0",
     "grunt": "^1.0.3",
     "grunt-cloudinary": "^0.3.2",
@@ -23,16 +26,32 @@
     "grunt-shell": "^2.1.0",
     "grunt-svgstore": "^1.0.0",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-notify": "^3.2.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sass-glob": "^1.0.9",
+    "gulp-size": "^3.0.0",
     "gulp-scp2": "^0.2.0",
     "gulp-sftp": "^0.1.5",
     "gulp-ssh-deploy": "0.0.3",
+    "gulp-stylelint": "^8.0.0",
     "load-grunt-config": "^0.19.2",
     "pixrem": "^4.0.1",
-    "postcss-discard-duplicates": "^2.0.1",
-    "postcss-merge-rules": "^2.1.1",
+    "postcss-discard-comments": "^4.0.1",
+    "postcss-discard-duplicates": "^4.0.2",
+    "postcss-merge-longhand": "^4.0.9",
+    "postcss-merge-rules": "^4.0.2",
+    "postcss-normalize": "^7.0.1",
+    "postcss-ordered-values": "^4.1.1",
+    "run-sequence": "^2.2.1",
+    "stylelint": "^9.8.0",
     "time-grunt": "^1.3.0"
   },
   "dependencies": {
-    "chalk": "^2.4.1"
+    "chalk": "^2.4.1",
+    "@frctl/fractal": "^1.1.7"
   }
 }
