--- a/.stylelintrc
+++ b/.stylelintrc
@@ -36,7 +36,6 @@
     "declaration-colon-space-after": "always-single-line",
     "declaration-colon-space-before": "never",
     "declaration-block-no-duplicate-properties": true,
-    "declaration-block-no-ignored-properties": true,
     "declaration-block-no-shorthand-property-overrides": true,
     "declaration-block-semicolon-newline-after": "always-multi-line",
     "declaration-block-semicolon-space-after": "always-single-line",
@@ -52,7 +51,7 @@
     "selector-attribute-brackets-space-inside": "never",
     "selector-combinator-space-after": "always",
     "selector-combinator-space-before": "always",
-    "selector-no-id": true,
+#    "selector-no-id": true,
     "selector-no-qualifying-type": true,
     "selector-no-vendor-prefix": true,
     "selector-pseudo-class-case": "lower",
@@ -61,13 +60,10 @@
     "selector-type-case": "lower",
     "selector-list-comma-newline-after": "always",
     "selector-list-comma-newline-before": "never-multi-line",
-    "root-no-standard-properties": true,
-    "rule-nested-empty-line-before": "always-multi-line",
-    "rule-non-nested-empty-line-before": "always-multi-line",
+    "rule-empty-line-before": "always-multi-line",
     "media-feature-colon-space-after": "always",
     "media-feature-colon-space-before": "never",
     "media-feature-name-no-vendor-prefix": true,
-    "media-feature-no-missing-punctuation": true,
     "media-feature-range-operator-space-after": "always",
     "media-feature-range-operator-space-before": "always",
     "media-query-list-comma-space-after": "always-single-line",
@@ -82,7 +78,6 @@
       80,
       ignore: ["non-comments"]
     ],
-    "no-duplicate-selectors": true,
-    "stylelint-disable-reason": "always-after"
+    "no-duplicate-selectors": true
   }
 }
