--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-svgstore": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "gulp-copy": "^4.0.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-notify": "^3.2.0",
     "gulp-postcss": "^8.0.0",
