Added Jekyll to the gulp deploy

--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sass-glob": "^1.0.9",
-    "gulp-size": "^3.0.0",
     "gulp-scp2": "^0.2.0",
     "gulp-sftp": "^0.1.5",
+    "gulp-shell": "^0.6.5",
+    "gulp-size": "^3.0.0",
     "gulp-ssh-deploy": "0.0.3",
     "gulp-stylelint": "^8.0.0",
     "load-grunt-config": "^0.19.2",
